Use RELEASE_TOKEN for GitHub release

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,9 +28,9 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
-    - name: Create Release
-      uses: softprops/action-gh-release@v1
-      with:
-        generate_release_notes: true
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+     - name: Create Release
+       uses: softprops/action-gh-release@v1
+       with:
+         generate_release_notes: true
+       env:
+         GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
